Fixed vertical alignment on desktop view

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,8 @@ table {
 
 body {
   background-color: hsl(30, 38%, 92%);
+  display: flex;
+  min-height: 100vh;
   padding: 0 20px;
 }
 
